avfilter/vf_geq: fix interpolation with 1 pixel width/height

Fixes ticket #9740.

Signed-off-by: Marton Balint <cus@passwd.hu>